<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item
        android:id="@+id/home_controls"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/home_controls"/>
	<item
        android:id="@+id/media_player"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/media_player"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
	<item android:id="@+id/connect"
          android:orderInCategory="100"
        android:showAsAction="never"
          android:title="@string/connect" />
    <item android:id="@+id/preferences"
          android:orderInCategory="100"
        android:showAsAction="never"
          android:title="@string/preferences" />
    <item android:id="@+id/menu_special_keys"
          android:orderInCategory="100"
          android:showAsAction="never"
    	  android:title="@string/special_keys" /> 
</menu>
