<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <com.senior.bluehome.EmulatorView android:id="@+id/emulatorView"
	      android:layout_width="wrap_content"
	      android:layout_height="wrap_content"
	      android:layout_alignParentLeft="true"
	      />
    
    <TextView
        android:id="@+id/text_living_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/living_room" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/text_kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="60dp"
        android:text="@string/kitchen" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/text_master_bedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:text="@string/master_bedroom" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/text_bedroom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="140dp"
        android:text="@string/bedroom1" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <TextView
        android:id="@+id/text_bedroom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="180dp"
        android:text="@string/bedroom2" 
        android:textAppearance="?android:attr/textAppearanceMedium" />
 
    <ToggleButton
        android:id="@+id/toggle_living_room"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="0dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true" />
    <ToggleButton
        android:id="@+id/toggle_kitchen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="40dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true" />
    <ToggleButton
        android:id="@+id/toggle_master_bedroom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="80dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true" />
    <ToggleButton
        android:id="@+id/toggle_bedroom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="120dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true" />
    <ToggleButton
        android:id="@+id/toggle_bedroom2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="160dp"
        android:textOn="@string/toggle_on"
        android:textOff="@string/toggle_off"
        android:checked="true" />

    <Button
        android:id="@+id/btnDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="68dp"
        android:text="@string/btn_display" />

</RelativeLayout>